--- a/index.html
+++ b/index.html
@@ -7,8 +7,12 @@
     <title> Trilha de Programaçã</title>
 </head>
 <body>
+<div class="parte01"
  <h1> So em Arapongas </h1>   
  <h2> no precin </h2>
+</div>
+<div class="parte02">
  <h3> Camisas do Palmeiras</h3>
+ </div>
 </body>
 </html>
