--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title> Trilha de Programaçã</title>
 </head>
 <body>
-<div class="parte01"
+<div class="parte01">
    <h1> So em Arapongas </h1>   
    <h2> no precin </h2>
 </div>
