--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <link rel="stylesheet" href="style.css">
-    <title> Trilha de Programaçã</title>
+    <link rel="stylesheet" href="style.css"> 
+    <title>Camisas do palmeiras</title>
 </head>
 <body>
-<div class="parte01">
-   <h1> So em Arapongas </h1>   
-   <h2> no precin </h2>
-</div>
-<div class="parte02">
-   <h3> Camisas do Palmeiras</h3>
- </div>
+    <h1>O palmeiraas foi fundado em 26 de agosto de 1914</h1>
+    <h2> Hoje em dia o palmeiras vive sua Melhor fase em varios anos, consquistando varios titulos como libertadores e brasileirão</h2>
+    <h3>Aqui esta algumas camisas do Verdão da nossa loja</h3>
+    <img id="imagem" src="camisa do pal.webp">
+    <h4> Promoçao relampago</h4>
+    <h5>a href="https://www.palmeirasstore.com/"> SAIBA MAIS</h5>
+    <img id="imagem" src="Camisa do palme">
 </body>
 </html>
